Changes in base due to headless and head

--- a/test-output/old/Suite/Depends on Groups.properties
+++ b/test-output/old/Suite/Depends on Groups.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Product][SuiteResult context=Payment][SuiteResult context=Depends on Groups]
+[SuiteResult context=Depends on Groups][SuiteResult context=Product][SuiteResult context=Payment]
