--- a/test-output/old/Suite/Payment.properties
+++ b/test-output/old/Suite/Payment.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Product][SuiteResult context=Payment][SuiteResult context=Depends on Groups]
+[SuiteResult context=Depends on Groups][SuiteResult context=Product][SuiteResult context=Payment]
